--- a/.github/ISSUE_TEMPLATE/bug_report_form.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report_form.yml
@@ -75,7 +75,7 @@ body:
       label: Code of Conduct
       description: By submitting this issue, you agree to follow our [Code of Conduct](https://github.com/NVIDIA-AI-Blueprints/rag/blob/main/CODE_OF_CONDUCT.md)
       options:
-        - label: I agree to follow __THIS PROJECT__'s Code of Conduct
+        - label: I agree to follow rag's Code of Conduct
           required: true
         - label: I have searched the [open bugs](https://github.com/NVIDIA-AI-Blueprints/rag/issues?q=is%3Aopen+is%3Aissue+label%3Abug) and have found no duplicates for this bug report
           required: true
